Finished refactoring for tonight, removed commented out code.

--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@
   <header>
     <!-- Nav Bar------------------------------------------------->
     <nav>
-        <!-- temporary 'hamburger' menu icon, will eventually be replaced -->
         <img src="images/favicon.png">
         <ul>
           <li><a href="#home">HOME</a></li>
@@ -88,7 +87,7 @@
     </nav>
   </header>
 
-  <!-- Welcome section ------------------------------------------------->
+  <!-- Home section ------------------------------------------------->
 
   <section id="home">
     <div class="container">
@@ -126,7 +125,6 @@
       <h1 id="about-h1">Skills</h1>
       <div class="row">
         <div class="six columns">
-          <!-- <div> -->
             <ul id="tech"><h3>Technical</h3></ul>
         </div>
         <div class="six columns">
@@ -157,14 +155,11 @@
   </section>
 
   <!-- Footer ------------------------------------------------->
+
   <footer>
-      <!-- <div class="container"> -->
-        <div class="row">
-          <!-- <div class="twelve.columns"> -->
-            <div id="copyright">&copy; 2016 Lizzie Gooding, All Rights Reserved  |  The content of this website may not be reproduced or distributed without the author's written consent.</div>
-          </div>
-        <!-- </div> -->
-      <!-- </div> -->
+    <div class="row">
+      <div id="copyright">&copy; 2016 Lizzie Gooding, All Rights Reserved  |  The content of this website may not be reproduced or distributed without the author's written consent.</div>
+    </div>
     </footer>
 
 <!-- Add jQuery & Handlebars libraries -->
