Refactored CSS and implemented SMACSS

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <article class="row" category="{{category}}">
       <div class="four columns">
         <div class="work-img" style="background-image: url({{imgUrl}})">
-        <a href="{{workUrl}}" target="_blank"></a>
+          <a href="{{workUrl}}" target="_blank"></a>
         </div>
       </div>
       <div class="eight columns">
@@ -91,11 +91,11 @@
 
   <section id="home">
     <div class="container">
-      <h1 id="title">Lizzie Gooding</h1>
+      <h1>Lizzie Gooding</h1>
       <div class="row">
         <div><a href="mailto:gooding.lizzie@gmail.com">{ email }</a></div>
         <div><a href="images/Resume.pdf" target="_blank">{ resume }</a></div>
-        <div><a href="https://www.linkedin.com/in/sarahelizabethgooding">{ linkedin }</a></div>
+        <div><a href="https://www.linkedin.com/in/lizziegooding">{ linkedin }</a></div>
         <div><a href="https://github.com/lizziegooding">{ github }</a></div>
       </div>
     </div>
@@ -103,31 +103,30 @@
 
   <!-- About section ------------------------------------------------->
 
-  <section id="about">
-    <div class="container">
-      <div class="row">
-          <div class="four columns">
-          <div id="about-img"></div></div>
-          <div class="eight columns">
-            <h1 id="about-h1">About</h1>
-          <p>
-          I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products.
-        </p>
+<section id="about">
+  <div class="container">
+    <div class="row">
+      <div class="four columns">
+        <div id="about-img"></div>
+      </div>
+      <div class="eight columns">
+        <h1>About</h1>
+        <p>I’m a spatially-minded developer seeking a career at the intersection of data visualization and programming. I am both a generalist, highly skilled in writing, speaking, and visualizing data, and a specialist with deep expertise in spatial problem solving and cartography. My qualitative skills complement and enhance a strong quantitative background that includes training in computer science, math, and spatial analysis. In the future, I am looking to combine data analysis, graphic design, and effective storytelling to create striking digital products.</p>
       </div>
     </div>
   </div>
-  </section>
+</section>
 
   <!-- Skills section ------------------------------------------------->
 
-  <section id="skills">
-    <div class="container">
-      <h1 id="about-h1">Skills</h1>
-      <div class="row">
-        <div class="six columns">
-            <ul id="tech"><h3>Technical</h3></ul>
-        </div>
-        <div class="six columns">
+<section id="skills">
+  <div class="container">
+    <h1>Skills</h1>
+    <div class="row">
+      <div class="six columns">
+        <ul id="tech"><h3>Technical</h3></ul>
+      </div>
+      <div class="six columns">
         <ul><h3>Qualitative</h3>
           <li>Project Management</li>
           <li>Research</li>
@@ -143,7 +142,7 @@
       </div>
     </div>
   </div>
-  </section>
+</section>
 
   <!-- Work section ------------------------------------------------->
 
@@ -158,9 +157,9 @@
 
   <footer>
     <div class="row">
-      <div id="copyright">&copy; 2016 Lizzie Gooding, All Rights Reserved  |  The content of this website may not be reproduced or distributed without the author's written consent.</div>
+      <div>&copy; 2016 Lizzie Gooding, All Rights Reserved  |  This website's content may not be reproduced or distributed without the author's written consent.</div>
     </div>
-    </footer>
+  </footer>
 
 <!-- Add jQuery & Handlebars libraries -->
 <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
