--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="container">
       <h1>Lizzie Gooding</h1>
       <div class="row">
-        <div><a href="mailto:gooding.lizzie@gmail.com">{ email }</a></div>
+        <div><a href="mailto:gooding.lizzie@gmail.com" target="_blank">{ email }</a></div>
         <div><a href="work/Resume.pdf" target="_blank">{ resume }</a></div>
         <div><a href="https://www.linkedin.com/in/lizziegooding" target="_blank">{ linkedin }</a></div>
         <div><a href="https://github.com/lizziegooding" target="_blank">{ github }</a></div>
