Combined css into a single file

--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
 
   <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
 
-  <link rel="stylesheet" type="text/css" href="css/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/module.css" />
-  <link rel="stylesheet" type="text/css" href="css/state.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="css/layout.css" />
+  <link rel="stylesheet" type="text/css" href="css/module.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="css/state.css" /> -->
+
 
   <!-- Connect Favicon icon -->
   <link rel="apple-touch-icon" sizes="57x57" href="images/favicon.ico/apple-icon-57x57.png">
