Initial MVP landing page with vertical rule divide

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
 
   <link rel="stylesheet" type="text/css" href="vendor/skeleton_css/skeleton.css" />
 
-  <!-- <link rel="stylesheet" type="text/css" href="css/layout.css" />
-  <link rel="stylesheet" type="text/css" href="css/module.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/base.css" />
-  <!-- <link rel="stylesheet" type="text/css" href="css/state.css" /> -->
 
 
   <!-- Connect Favicon icon -->
@@ -93,14 +90,17 @@
 
   <section id="home">
     <div class="container">
-      <h1>Lizzie Gooding</h1>
       <div class="row">
-        <div><a href="mailto:gooding.lizzie@gmail.com" target="_blank">{ email }</a></div>
-        <div><a href="work/Resume.pdf" target="_blank">{ resume }</a></div>
-        <div><a href="https://www.linkedin.com/in/lizziegooding" target="_blank">{ linkedin }</a></div>
-        <div><a href="https://github.com/lizziegooding" target="_blank">{ github }</a></div>
-      </div>
+      <h1>Lizzie<br>Gooding</h1>
+      <div class="vertical-line"></div>
+      <ul>
+        <li><a href="mailto:gooding.lizzie@gmail.com" target="_blank">{ email }</a></li>
+        <li><a href="work/Resume.pdf" target="_blank">{ resume }</a></li>
+        <li><a href="https://www.linkedin.com/in/lizziegooding" target="_blank">{ linkedin }</a></li>
+        <li><a href="https://github.com/lizziegooding" target="_blank">{ github }</a></li>
+      </ul>
     </div>
+  </div>
   </section>
 
   <!-- About section ------------------------------------------------->
