Finished landing page responsive design

--- a/index.html
+++ b/index.html
@@ -89,18 +89,18 @@
   <!-- Home section ------------------------------------------------->
 
   <section id="home">
-    <div class="container">
-      <div class="row">
+    <!-- <div class="container"> -->
+      <div class="home-box">
       <h1>Lizzie<br>Gooding</h1>
-      <div class="vertical-line"></div>
+      <!-- <div class="vertical-line"></div> -->
       <ul>
-        <li><a href="mailto:gooding.lizzie@gmail.com" target="_blank">{ email }</a></li>
-        <li><a href="work/Resume.pdf" target="_blank">{ resume }</a></li>
-        <li><a href="https://www.linkedin.com/in/lizziegooding" target="_blank">{ linkedin }</a></li>
-        <li><a href="https://github.com/lizziegooding" target="_blank">{ github }</a></li>
+        <li><a href="mailto:gooding.lizzie@gmail.com" target="_blank"> email </a></li>
+        <li><a href="work/Resume.pdf" target="_blank"> resume </a></li>
+        <li><a href="https://www.linkedin.com/in/lizziegooding" target="_blank"> linkedin </a></li>
+        <li><a href="https://github.com/lizziegooding" target="_blank"> github </a></li>
       </ul>
     </div>
-  </div>
+  <!-- </div> -->
   </section>
 
   <!-- About section ------------------------------------------------->
