Finished hamburger menu

--- a/index.html
+++ b/index.html
@@ -70,12 +70,20 @@
 
   <!-- Header section ------------------------------------------------->
 
-  <header>
+  <!-- <header> -->
     <!-- Nav Bar------------------------------------------------->
     <nav>
-        <img src="images/favicon.png">
-    </nav>
-    <div id="overlay">
+    <div id="nav-icon2">
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+  </nav>
+
+  <div id="overlay">
     <ul>
       <li><a href="#home">HOME</a></li>
       <li><a href="#about">ABOUT</a></li>
@@ -84,7 +92,7 @@
     </ul>
   </div>
 
-  </header>
+  <!-- </header> -->
 
   <!-- Home section ------------------------------------------------->
 
