Changed h4 header to Gill Sans, updated resume

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </a>
       </div>
       <div class="eight columns">
-        <h4><a href="{{workUrl}}" target="_blank">{{title}}</a></h4>
+        <a href="{{workUrl}}" target="_blank"><h4>{{title}}</h4></a>
         {{{body}}}
       </div>
     </article>
